# bigt

./: .gitignore  INSTALL.md  LICENSE  README.md  pyproject.toml
src/bigt/: cli.py  usage.py  usaged.py
